--- a/index.css
+++ b/index.css
@@ -1,74 +1,132 @@
-/*CSS File for my web developer profile*/
-/*Color palette: Hex color codes:  #153462,  #11bfae,  #dae1e7 and  #ffffff - white */
+/* Color palette: Hex color codes:  #153462,  #11bfae,  #dae1e7 and  #ffffff - white */
 
-
-
-html {
-	scroll-behavior: smooth;
+html, body {
+  overflow-x: hidden;
+  height: 100%;
 }
 
 body {
-	font-family: "Nunito Sans", sans-serif;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "IBM Plex Sans", sans-serif;
 }
 
 nav {
-	background-color: #153462;
+  background-color: #153462;
 }
 
-btn {
-	background-color: #153462;
+.card-header .btn-link {
+  background-color: #11bfae;
+  color: #ffffff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 5px;
 }
+
+.card-header .btn-link:hover {
+  background-color: #1e5067;
+}
+
+.card-body {
+  background-color: #ffffff;
+  color: #000000;
+  padding: 15px;
+}
+
+
+
+form .btn {
+  background-color: #cbd8df;
+  color: #141e26;
+}
+
+
 
 #landing {
-	background-color: #dae1e7;
-
+  background-color: #dae1e7;
 }
 
 #projects {
-	background-color: #dae1e7;
+  background-color: #dae1e7;
 }
 
 #contact {
-	background-color: #dae1e7;
+  background-color: #dae1e7;
 }
 
 #form {
-	background-color: #11bfae;
+  background-color: #11bfae;
 }
 
 #card {
-	background-color: #11bfae;
-	width: 18rem;
+  background-color: #11bfae;
+  width: 18rem;
+
 }
 
+
 #endpart {
-	background-color: #dae1e7;
-	height: 20px;
+  background-color: #dae1e7;
+  height: 20px;
+}
+
+.card-header {
+  background-color: #cbd8df;
+  color: #ffffff;
+  font-weight: bold !important;
+}
+
+
+.p-m-4 {
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
+  padding-bottom: 2rem !important;
 }
 
 h3 {
-	font-weight: 600;
+  font-weight: 600;
 }
 
 footer {
-	background-color: #153462;
+  background-color: #153462;
 }
 
 #projectsimg {
-	height: 250px;
-	width: 200px;
-	display: block;
-	margin: 0 auto;
-	padding:1rem;
+  height: 200px;
+  width: 200px;
+  display: block;
+  margin: 0 auto;
+  padding: 1rem;
 }
-
-
 
 #contactlogo {
-	height: 40px;
-	
+  height: 40px;
 }
 
-/*tools*/
+.accordion {
+  background-color: #11bfae;
+  color: #ffffff;
+  border-radius: 5px;
+}
 
-/*tools end*/
+.linkedin-logo {
+  width: 24px;
+  height: 24px;
+}
+
+.mail-logo {
+  width: 24px;
+  height: 24px;
+}
