--- a/index.css
+++ b/index.css
@@ -5,9 +5,10 @@ html, body {
   height: 100%;
 }
 
-body {
-  padding: 0;
-  margin: 0;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 html {
@@ -43,6 +44,7 @@ nav {
   background-color: #ffffff;
   color: #000000;
   padding: 15px;
+  text-align: justify;
 }
 
 
@@ -131,7 +133,13 @@ footer {
   height: 24px;
 }
 
-.embed-responsive iframe {
-    width: 100%;
-    height: 100%;
+/* Media query for small screens */
+@media (max-width: 576px) {
+  .container iframe {
+    width: 100% !important; /* Set width to full viewport width */
+    max-width: 400px !important; /* Set a maximum width for the iframe on small screens */
+    height: 1100px !important; /* Set a fixed height for the iframe on small screens */
+    overflow: hidden; /* Hide scrollbar for the iframe */
+  }
 }
+
